#pragma once

enum ScreenName {
    MENU,
    LOBBY,
    GAME,
    BETWEEN_ROUNDS
};
